--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@ h3{
     color:blue;
 }
 p{
-    border: 3px solid red;
-    width: 500px;
-    height:300px;
+    background-color: grey;
+    border: 5px solid black;
 }
